--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -8,10 +8,14 @@
     {% if message %}
         <p style="color: green;">{{ message }}</p>
     {% endif %}
+    
+    <!-- Form with CSRF token -->
     <form method="POST" action="{{ url_for('change_password') }}">
-        <label>New Password: <input type="password" name="new_password" required></label><br>
-        <button type="submit">Update Password</button>
+        {{ form.hidden_tag() }}  <!-- CSRF token is added here -->
+        <label>New Password: {{ form.new_password() }}</label><br>
+        {{ form.submit() }}
     </form>
+    
     <p><a href="{{ url_for('home') }}">Back to Home</a></p>
 </body>
 </html>
